--- a/clusters/staging/apps.yaml
+++ b/clusters/staging/apps.yaml
@@ -12,3 +12,7 @@ spec:
     name: flux-system
   path: ./apps/staging
   prune: true
+  decryption:
+      provider: sops
+      secretRef:
+        name: sops-age
