--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -22,7 +22,9 @@ spec:
           image: sissbruecker/linkding:1.31.0
           ports:
             - containerPort: 9090
-
+          envFrom:
+            - secretRef:
+                name: env-secret
           securityContext:
             allowPrivilegeEscalation: false
 
