--- a/apps/staging/linkding/kustomization.yaml
+++ b/apps/staging/linkding/kustomization.yaml
@@ -4,5 +4,6 @@ namespace: linkding
 resources:
   - ../../base/linkding/
   - cloudflare.yaml
-  - test-secret.yaml
+  #  - test-secret.yaml
   - tunnel.yaml
+  - env-secret.yaml
