--- a/apps/staging/linkding/env-secret.yaml
+++ b/apps/staging/linkding/env-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-    LD_SUPERUSER_NAME: ENC[AES256_GCM,data:nm3ktfQBEbw=,iv:bGyjVxU3bhI2ZbfOw93Kc0sZgVHvNYojlWOaWzMF8tw=,tag:oAiyLSBgTB021ZKgyzvt6A==,type:str]
-    LD_SUPERUSER_PASSWORD: ENC[AES256_GCM,data:PID8QuX4/CsFBhHadw++1GR0EULXZcppnis+PA==,iv:F7bgpLcQKo6t5cWxQOMgQKpkkdJnRct3yk5QUpiYWhk=,tag:B2xg5gch9VGAD2AsPSAl1g==,type:str]
+    LD_SUPERUSER_NAME: ENC[AES256_GCM,data:UxpkcAcL6Wj4f0YFDc2Pbw==,iv:x8qjMxuUbkzV7vraYfdWYYOuKhBXvkcK0YqnkG7FCbA=,tag:NPCO6xkBLiID5XaEFvdwag==,type:str]
+    LD_SUPERUSER_PASSWORD: ENC[AES256_GCM,data:i3ecjDDLjLNy/5lLMzEBQKDs46a2pLLOShrvgQ==,iv:FLDrsdv/CKkvW9hBYRA8yz7nBo7zz4uCmRcJIBrN7sA=,tag:+SZSUiSwBYb3yoSPiCFSGQ==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
@@ -15,14 +15,14 @@ sops:
         - recipient: age1cg50h2fmf3zvcnrseldk4hmgr6stks8heuv52yql8nmmxq84cpxsgz35ly
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNdjc2ejRNMWJ6eHJiNlAy
-            OUJvM2VWbGZjQVhMUmt3Z1QrVjdrNXBuQjBvCjl5cUpwNXZyTXJxTmd2ekg4b0dl
-            Q1hKckUyWmpuZ0dVWWZXcTVVOURmQlkKLS0tIGx0VktBMk1KekswMWRHdnhKcU5j
-            Ty9BNWU1NnAyTkVXblNhazB1ckhBbkkKFE3p0GwSNqYbxCFsvfLEkijpi8rU6MYX
-            xSO3JBg5xCSscSfw5ydO3aQrkEL6IveyQLaBBZfHoh+/1nYO+XgGhQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvQjZJSEdCN0dwdWJqb0NF
+            MXEvaVJtL1MrUFpXV3FRb3ZWaGpCRzl4N3pBCmlURlMxWnRKREl0dDh6L2F6U295
+            eHcvTWsvMG5wOCt1a2M2bTU1VmZuZlkKLS0tIGwvaEJBa2VEZDZTb1V1UHlzK0t3
+            OFkzUEpPQmloZElrVGpXZnluM2hoZ00KsoSdYsqwCx2VwopDbTUyHKCDTaEAPdib
+            QSgg2tGdfM9DpfY9aA8RsLaGtm1caMbK5CJgTfsdCTW5nXHWLzeojQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-13T19:29:29Z"
-    mac: ENC[AES256_GCM,data:krT4m4eXpcCou/9fJQkjXJoAFcvmzikFqUqRWoRcnWq1aWX6jtCIc6EUz5c2duwXmK4V0s3yFWOmtrD2mhlgBFJUwvnlJXN6nZSlz9MJpb3dh6/qD9aPDOw/nYkVFKc0OxxTvUn/Q1/SOXGm2b+quGNGiE1VioEgIe1wNflRL78=,iv:hkbHkf0kkGPo3CbzCo5xTNFeaKKmbwpLCD7kWHEvBIw=,tag:YXffl8LfZOiTmM7jjIPb3w==,type:str]
+    lastmodified: "2025-03-13T19:43:26Z"
+    mac: ENC[AES256_GCM,data:687b6k/t4r5+h1ykIRNZFTOeSnXKEI0Gz5E5SYLwWQ7Y+420Ay00saQN7uo+nXWYNNPoS5QVMIoNyGN17MJve3SccNvZlbcehUGpB1+PlfrhrlPXRJfs5uYA291wnuEKQjGZMHuFjt23d9ylYOOkCJkfK75u+GonsHCnXXLBuQA=,iv:ZV3GI2sQxAxz56/q6uphwEpXB8xM7vQRjkQBvRrzmOQ=,tag:N5mEHo/i9J2FuwwPHFMCDQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.2
